--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(engine)
+project(ECENgine)
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -16,19 +16,25 @@ set(ENGINE_LIB_FILES ${CMAKE_CURRENT_LIST_DIR}/lib/glew32s.lib
 # Group all source files under one definition
 set(SOURCE_FILES src/ECENgine/Application.h
                  src/ECENgine/Application.cpp
-                 src/ECENgine/EntryPoint.h)
+                 src/ECENgine/EntryPoint.h
+                 src/ECENgine/Log.cpp
+                 src/ECENgine/Log.h)
+
+set(ENGINE_INCLUDE_DIR includes module/spdlog/include)
+
+set(SANDBOX_INCLUDE_DIR src module/spdlog/include)
 
 if(WIN32)
     # Create a static library from the files within SOURCE_FILES
-    add_library(windows ${SOURCE_FILES})
-    target_compile_definitions(windows PRIVATE -DGLEW_STATIC)
-    target_include_directories(windows PRIVATE includes)
-    target_link_libraries(windows ${ENGINE_LIB_FILES})
+    add_library(ECENgine ${SOURCE_FILES})
+    target_compile_definitions(ECENgine PRIVATE -DGLEW_STATIC)
+    target_include_directories(ECENgine PRIVATE ${ENGINE_INCLUDE_DIR})
+    target_link_libraries(ECENgine ${ENGINE_LIB_FILES})
 
 
-    set(SANDBOX_FILES ${CMAKE_CURRENT_LIST_DIR}/Sandbox/sandbox.cpp)
+    set(SANDBOX_FILES Sandbox/sandbox.cpp)
 
-    add_executable(engine ${SANDBOX_FILES})
-    target_include_directories(engine PRIVATE src)
-    target_link_libraries(engine PRIVATE windows)
+    add_executable(sandbox ${SANDBOX_FILES})
+    target_include_directories(sandbox PRIVATE ${SANDBOX_INCLUDE_DIR})
+    target_link_libraries(sandbox PRIVATE ECENgine)
 endif(WIN32)
